--- a/SabrinaEN.yml
+++ b/SabrinaEN.yml
@@ -272,3 +272,89 @@ he wants his Keyblade back, imidetly.
 
 Otherwise hes telling your MOM.'
   id: 1483
+- en: 'Royal Gear'
+  id: 15866
+- en: '{:color #F0F00080}Starseeker{:reset} A blue Gear attached to the 
+
+Keyblade. {:color #F0F00080}A Sabrina Costum{:reset}'
+  id: 15867
+- en: 'Lollipop Chainblade'
+  id: 15868
+- en: '{:color #F0F00080}Hidden Dragon{:reset} Has a hard Chain, increasing 
+
+the amount of damage dealt from Reaction 
+
+Commands by {:color #F0F00080}50%{:reset} <3.'
+  id: 15869
+- en: 'Keyblade of Heart'
+  id: 15920
+- en: '{:color #F0F00080}Monochrome{:reset} Increases the effect of 
+
+restoration items used on the field 
+
+by {:color #F0F00080}50%{:reset}.'
+  id: 15921
+- en: 'Jungle King'
+  id: 15924
+- en: '{:color #F0F00080}Circle of Life{:reset} S.A.O. Bossdrop,
+
+increasing MP restoration speed by {:color #F0F00080}25%{:reset} 
+
+after MP is consumed.'
+  id: 15925
+- en: 'Save the Queen+'
+  id: 15934
+- en: '{:color #F0F00080}Wishing Lamp{:reset} Wishes come true by 
+
+increasing the drop rate of munny, and HP 
+
+and MP Orbs.'
+  id: 15935
+- en: 'Brightcrest'
+  id: 15944
+- en: '{:color #F0F00080}Fatal Crest{:reset}{:width 95} Increases strength by {:color #F0F00080}2{:reset} {:width 95}during MP 
+
+Charge and enables combos to continue endlessly.
+
+{:width 90}The combo finishing move becomes unavailable.'
+  id: 15945
+- en: 'Way to Dawn'
+  id: 15948
+- en: '{:color #F0F00080}Fenrir{:reset} Has great range and strength, 
+
+but maximum ground and midair combos 
+
+are decreased by 1.'
+  id: 15949
+- en: 'Save the King+'
+  id: 15940
+- en: '{:color #F0F00080}Sweet Memories{:reset} Although it does not 
+
+enhance attack strength, it increases the 
+
+drop rate of drive orbs in place of munny.'
+  id: 15941
+- en: 'X-Blade'
+  id: 1480
+- en: '{:color #F0F00080}Detection Saber{:reset} 
+
+7 Xehanorts and 13 soras will create the 
+
+KeyyyyBlade, X-Balde, chiiii blaeeeyyde'
+  id: 1481
+- en: 'Soul Eater'
+  id: 1484
+- en: '{:color #F0F00080}Pureblood{:reset} Prevolution
+
+of Rikus Way to Dawn...he should have played 
+
+the more KHUX...XD'
+  id: 1485
+- en: 'Placeholder'
+  id: 1508
+- en: '{:color #F0F00080}Kingdomkey D{:reset} A Red Gear as Equivalent to 
+
+Royal Gear.Filled with Power and Upgrades 
+
+to Protect the Roayle Gates'
+  id: 1509
