--- a/SabrinaEN.yml
+++ b/SabrinaEN.yml
@@ -350,11 +350,27 @@ of Rikus Way to Dawn...he should have played
 
 the more KHUX...XD'
   id: 1485
-- en: 'Placeholder'
+- en: 'Kingdomkey OC'
   id: 1508
-- en: '{:color #F0F00080}Kingdomkey D{:reset} A Red Gear as Equivalent to 
+- en: '{:color #F0F00080}Placeholder{:reset} A Red Gear as Equivalent to 
 
 Royal Gear.Filled with Power and Upgrades 
 
 to Protect the Roayle Gates'
   id: 1509
+- en: 'End of Pain'
+  id: 15926
+- en: '{:color #F0F00080}Photon Debugger{:reset} Increases damage done 
+
+with thunderbased attacks by {:color #F0F00080}20%{:reset} do to its 
+
+Wealders Speed.'
+  id: 15927
+- en: 'Combined Keyblade'
+  id: 15936
+- en: '{:color #F0F00080}Ultima Hitbox!{:reset} The greater number of 
+
+combos landed, the more damage is dealt, 
+
+leading to a strong finishing move!'
+  id: 15937
